# tfs

./: CONTRIBUTORS  DEPLOY.md  INSTALL.md  Makefile.am  README  README.md  ax_lib_mysql.m4  build.sh  configure.ac  tcmalloc.m4
conf/: cs.conf  (+8 more)
scripts/: Makefile.am  compact_process.sh  cs_sync.sh  start_sync_log.sh  stfs.sh  tfs.sh
scripts/ha/: Makefile.am  NameServer  RootServer  authkeys.sh  deploy.sh  ha.cf  ns.xml  nsdep.sh  rs.xml  rsdep.sh
scripts/nameserver/: get_stat.sh
sql/: Makefile.am
sql/ms/: Makefile.am  create_dir.sql  create_file.sql  create_table.sql  mv_dir.sql  mv_file.sql  pwrite_file.sql  rm_dir.sql  rm_file.sql  seq_simulator.sql
sql/rcs/: Makefile.am  create_table.sql  rc_test_info.sql
src/adminserver/: Makefile.am  adminserver.cpp  adminserver.h
src/checkserver/: Makefile.am  checkserver.cpp  checkserver.h  server_helper.cpp  server_helper.h
src/common/: Makefile.am  array_helper.h  atomic.h  base_main.cpp  base_main.h  base_packet.cpp  base_packet.h  base_packet_factory.cpp  base_packet_factory.h  base_packet_streamer.cpp  base_packet_streamer.h  base_service.cpp  base_service.h  buffer.h  cdefine.h  client_manager.cpp  client_manager.h  config_item.h  define.h  directory_op.cpp  directory_op.h  error_msg.h  file_op.cpp  file_op.h  file_queue.cpp  file_queue.h  file_queue_thread.cpp  file_queue_thread.h  func.cpp  func.h  internal.cpp  internal.h  local_packet.h  lock.cpp  lock.h  meta_hash_helper.cpp  meta_hash_helper.h  meta_server_define.cpp  meta_server_define.h  mmap_file.cpp  (+19 more)
src/dataserver/: Makefile.am  bit_map.cpp  bit_map.h  block_checker.cpp  block_checker.h  block_status.h  blockfile_format.h  blockfile_manager.cpp  blockfile_manager.h  check_block.cpp  check_block.h  compact_block.cpp  compact_block.h  cpu_metrics.cpp  cpu_metrics.h  data_file.cpp  data_file.h  data_handle.cpp  data_handle.h  data_management.cpp  data_management.h  dataserver_define.h  dataservice.cpp  dataservice.h  file_repair.cpp  file_repair.h  gc.cpp  gc.h  index_handle.cpp  index_handle.h  logic_block.cpp  logic_block.h  mmap_file_op.cpp  mmap_file_op.h  physical_block.cpp  physical_block.h  replicate_block.cpp  replicate_block.h  requester.cpp  requester.h  (+11 more)
src/message/: Makefile.am  admin_cmd_message.cpp  admin_cmd_message.h  base_task_message.h  block_info_message.cpp  block_info_message.h  checkserver_message.cpp  checkserver_message.h  client_cmd_message.cpp  client_cmd_message.h  close_file_message.cpp  close_file_message.h  compact_block_message.cpp  compact_block_message.h  crc_error_message.cpp  crc_error_message.h  create_filename_message.cpp  create_filename_message.h  dataserver_message.cpp  dataserver_message.h  dump_plan_message.cpp  dump_plan_message.h  file_info_message.cpp  file_info_message.h  get_dataserver_information_message.cpp  get_dataserver_information_message.h  get_tables_from_rts_message.cpp  get_tables_from_rts_message.h  heart_message.cpp  heart_message.h  message_factory.cpp  message_factory.h  meta_nameserver_client_message.cpp  meta_nameserver_client_message.h  oplog_sync_message.cpp  oplog_sync_message.h  rc_session_message.cpp  rc_session_message.h  read_data_message.cpp  read_data_message.h  (+20 more)
src/monitor/: Makefile.am  NameServer  README  cibrsc.xml  ha_monitor.cpp  ns_ping.cpp  test.sh
src/name_meta_server/: Makefile.am  database_helper.cpp  database_helper.h  database_pool.cpp  database_pool.h  lru.h  main.cpp  mem_helper.cpp  mem_helper.h  meta_bucket_manager.cpp  meta_bucket_manager.h  meta_cache_helper.cpp  meta_cache_helper.h  meta_cache_info.cpp  meta_cache_info.h  meta_heart_manager.cpp  meta_heart_manager.h  meta_server_service.cpp  meta_server_service.h  meta_store_manager.cpp  meta_store_manager.h  mysql_database_helper.cpp  mysql_database_helper.h
src/nameserver/: Makefile.am  block_collect.cpp  block_collect.h  block_id_factory.cpp  block_id_factory.h  block_manager.cpp  block_manager.h  client_request_server.cpp  client_request_server.h  gc.cpp  gc.h  global_factory.cpp  global_factory.h  heart_manager.cpp  heart_manager.h  layout_manager.cpp  layout_manager.h  nameserver.cpp  nameserver.h  ns_define.cpp  ns_define.h  oplog.cpp  oplog.h  oplog_sync_manager.cpp  oplog_sync_manager.h  server_collect.cpp  server_collect.h  server_manager.cpp  server_manager.h  service.cpp  task.cpp  task.h  task_manager.cpp  task_manager.h
src/new_client/: Makefile.am  bg_task.cpp  bg_task.h  client_config.cpp  client_config.h  fsname.cpp  fsname.h  gc_file.cpp  gc_file.h  gc_worker.cpp  gc_worker.h  local_key.cpp  local_key.h  lru.h  md5.cpp  md5.h  segment_container.h  tair_cache_helper.cpp  tair_cache_helper.h  tair_unique_handler.cpp  tair_unique_handler.h  tfs_client_api.cpp  tfs_client_api.h  tfs_client_capi.cpp  tfs_client_capi.h  tfs_client_impl.cpp  tfs_client_impl.h  tfs_client_metrics.h  tfs_file.cpp  tfs_file.h  tfs_large_file.cpp  tfs_large_file.h  tfs_meta_client_api.cpp  tfs_meta_client_api.h  tfs_meta_client_api_impl.cpp  tfs_meta_client_api_impl.h  tfs_meta_helper.cpp  tfs_meta_helper.h  tfs_meta_manager.cpp  tfs_meta_manager.h  (+15 more)
src/rcserver/: Makefile.am  app_resource.cpp  app_resource.h  base_resource.cpp  base_resource.h  database_helper.cpp  database_helper.h  i_resource_manager.h  ip_replace_helper.cpp  ip_replace_helper.h  main.cpp  mocked_resource_manager.h  mysql_database_helper.cpp  mysql_database_helper.h  rc_service.cpp  rc_service.h  resource.h  resource_manager.cpp  resource_manager.h  resource_server_data.h  session_manager.cpp  session_manager.h
src/rootserver/: Makefile.am  build_table.cpp  build_table.h  global_factory.cpp  global_factory.h  meta_server_manager.cpp  meta_server_manager.h  root_server_heart_manager.cpp  root_server_heart_manager.h  rootserver.cpp  rootserver.h  service.cpp
tests/batch/: Makefile.am  test_batch_mix.cpp  test_batch_read.cpp  test_batch_write.cpp  thread.h  util.cpp  util.h
tests/common/: Makefile.am  new_replicate_block_msg.cpp  new_replicate_block_msg.h  test_base_service.cpp  test_base_service_client.cpp  test_base_service_helper.h  test_packet.cpp  (+3 more)
(+243 files in other folders)
