pkgdata_datadir=${prefix}/sql
pkgdata_data_DATA=

SUBDIRS = ms rcs 

DIST_SUBDIRS = ms rcs
EXTRA_DIST=ms/create_dir.sql ms/create_file.sql ms/create_table.sql ms/Makefile.am ms/mv_dir.sql\
ms/mv_file.sql ms/pwrite_file.sql ms/rm_dir.sql ms/rm_file.sql ms/seq_simulator.sql rcs/create_table.sql

install-data-hook:
